Tradotti tutti i Create in Crea

--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -262,7 +262,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#apriNmap">
+                        <a href="#0" data-toggle="collapse" data-target="#apriNmap">
                             <strong>
                                 NMAP SCAN
                             </strong>
@@ -469,7 +469,7 @@
                                         </div>
                                         <div class="col-sm-6 col-sm-offset-6 text-right">
                                             <div class="form-group">
-                                                <input type="submit" asp-action="Create" asp-route-cosa="nmap" class="btn btn-default" value="Create" />&nbsp;&nbsp;
+                                                <input type="submit" asp-action="Create" asp-route-cosa="nmap" class="btn btn-default" value="Crea" />&nbsp;&nbsp;
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
@@ -532,7 +532,7 @@
                                         <input type="text" asp-for="@Model.NESSUS.JSON" class="form-control">
                                         <br>
                                         <div class="col text-right">
-                                            <input type="submit" asp-action="Create" asp-route-cosa="nessus" value="Create" class="btn btn-default" />
+                                            <input type="submit" asp-action="Create" asp-route-cosa="nessus" value="Crea" class="btn btn-default" />
                                         </div>
                                     </div>
                                 </div>
@@ -801,7 +801,7 @@
                                     </div>
                                     <div class="col-sm-6 col-sm-offset-6 text-right">
                                         <div class="form-group">
-                                            <input type="submit" asp-action="Create" asp-route-cosa="wapiti" class="btn btn-default" value="Create" />&nbsp;&nbsp;|
+                                            <input type="submit" asp-action="Create" asp-route-cosa="wapiti" class="btn btn-default" value="Crea" />&nbsp;&nbsp;|
                                             <a asp-action="Index"> Torna alla lista</a>
                                         </div>
                                     </div>
@@ -904,7 +904,7 @@
                                         </div>
                                         <div class="col-sm-6 col-sm-offset-6 text-right">
                                             <div class="form-group">
-                                                <input type="submit" asp-action="Create" asp-route-cosa="droopescan" class="btn btn-default" value="Create" />&nbsp;&nbsp;
+                                                <input type="submit" asp-action="Create" asp-route-cosa="droopescan" class="btn btn-default" value="Crea" />&nbsp;&nbsp;
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
@@ -951,7 +951,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#dnsRecon">
+                        <a data-toggle="collapse" data-target="#dnsRecon">
                             <strong>
                                 DNSRECON
                             </strong>
@@ -1058,7 +1058,7 @@
                                         </div>
                                         <div class="col-sm-6 col-sm-offset-6 text-right">
                                             <div class="form-group">
-                                                <input type="submit" asp-action="Create" asp-route-cosa="dnsrecon" class="btn btn-default" value="Create" />&nbsp;&nbsp;
+                                                <input type="submit" asp-action="Create" asp-route-cosa="dnsrecon" class="btn btn-default" value="Crea" />&nbsp;&nbsp;
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
@@ -1198,7 +1198,7 @@
                                         </div>
                                         <div class="col-sm-6 col-sm-offset-6 text-right">
                                             <div class="form-group">
-                                                <input type="submit" asp-action="Create" asp-route-cosa="infoga" class="btn btn-default" value="Create" />&nbsp;&nbsp;
+                                                <input type="submit" asp-action="Create" asp-route-cosa="infoga" class="btn btn-default" value="Crea" />&nbsp;&nbsp;
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
