inserimento modulo infoga email

--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -721,29 +721,56 @@
                     </div>
                 </div>
             </div>
-            <div class="col-5">
-                    <div class="panel panel-sidebar">
-                        <div class="panel-heading">
-                            <a href="#" data-toggle="collapse" data-target="#vedi">
-                                <strong>
-                                  vedi1
-                                </strong>
-                                <span class="caret"></span>
-                            </a>
-                        </div>
-                        <div class="collapse " id="vedi">
-                            <div class="panel-body ">
-    
-                                <table class="table" >
-                                    <div class="method">
-                                      
-                                </table>
-    
-                            </div>
+             <div class="col-5">
+                <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a href="#" data-toggle="collapse" data-target="#infogae">
+                            <strong>
+                                 INFOGA EMAIL
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse " id="infogae">
+                        <div class="panel-body ">
+
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Nome
+                                            </th>
+                                            <th>
+                                                Comando
+                                            </th>
+
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    @foreach (var item in Model.ModuliINFOGAEMAIL) { 
+                                    <tr>
+                                        <td>
+                                           <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
+                                            <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+
                         </div>
                     </div>
                 </div>
-                
+            </div>
 
         </div>
         </div>
