--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -1131,20 +1131,7 @@
 
                                     <hr />
                                     <div class="col-sm-12">
-                                        <!--<div class="col-sm-6">
-                                            <div class="form-group row">
-                                                <div class="col-sm-3">
-                                                    <label class="control-label" asp-for="@Model.INFOGA.Dominio"></label>
-                                                </div>
-                                                <input class="col-sm-9" asp-for="@Model.INFOGA.Dominio" />
-                                            </div>
-                                            <div class="form-group row">
-                                                <div class="col-sm-3">
-                                                    <label class="control-label" asp-for="@Model.INFOGA.Email"></label>
-                                                </div>
-                                                <input class="col-sm-9" asp-for="@Model.INFOGA.Email" />
-                                            </div>
-                                        </div>-->
+                                       
                                         <div class="col-sm-7" style="margin:0 auto; float:none">
                                             <div class="form-group row">
                                                 <h4 asp-for="@(Model.INFOGA.ComandoPersonalizzato)">Comando Personalizzato</h4>
@@ -1184,21 +1171,97 @@
                                                 <option value="2">tre</option>
                                             </select>
                                         </div>
+                                        <div class="col-sm-6 col-sm-offset-6 text-right">
+                                            <div class="form-group">
+                                                <input type="submit" asp-action="Create" asp-route-cosa="infoga" class="btn btn-default" value="Crea" />&nbsp;&nbsp;
+                                                <a asp-action="Index"> Torna alla lista</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="col-5">
+                <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a href="#" data-toggle="collapse" data-target="#infogae">
+                            <strong>
+                                INFOGA E-MAIL
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse col-5" id="infogae">
+                        <div class="panel-body">
+                            <h4>
+                                <strong> Configura modulo </strong>
+                            </h4>
+                            <hr>
+                            <form asp-action="Create" name="infogaForm">
+                                <input type="hidden" asp-for="@Model.INFOGAEMAIL.Applicazione" value="@webmva.Models.APPLICAZIONE.INFOGAEMAIL" />
+
+
+                                <div class="col-sm-12">
+                                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                                        <div class="form-group">
+                                            <h4 asp-for="@(Model.INFOGAEMAIL.Nome)">Nome Modulo</h4>
+                                            <input class="form-control" asp-for="@(Model.INFOGAEMAIL.Nome)" />
+                                        </div>
+                                    </div>
+
+                                    <hr />
+                                    <div class="col-sm-12">
+                                        <!--<div class="col-sm-6">
+                                            
+                                            <div class="form-group row">
+                                                <div class="col-sm-3">
+                                                    <label class="control-label" asp-for="@Model.INFOGAEMAIL.Email"></label>
+                                                </div>
+                                                <input class="col-sm-9" asp-for="@Model.INFOGAEMAIL.Email" />
+                                            </div>
+                                        </div>-->
+                                        <div class="col-sm-7" style="margin:0 auto; float:none">
+                                            <div class="form-group row">
+                                                <h4 asp-for="@(Model.INFOGAEMAIL.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                <input class="form-control" asp-for="@(Model.INFOGAEMAIL.ComandoPersonalizzato)" />
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-12">
+                                        <h4>Tipi di enumerazione</h4>
+                                        <hr />
+                                       
+                                        <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli verbosità</label>
+                                            </div>
+                                            <select class="col-sm-5" asp-for="@Model.INFOGAEMAIL.Verbose">
+                                                <option value="3">nessuno</option>
+                                                <option value="0">uno </option>
+                                                <option value="1">due</option>
+                                                <option value="2">tre</option>
+                                            </select>
+                                        </div>
                                         <div class="col-sm-12">
-                                            <h4>Altro</h4>
-                                            <hr />
+                                        <hr />
                                             <div class="row">
 
                                                 <div class="form-group col-sm-6">
                                                     <label class="control-label">
-                                                        <input type="checkbox" asp-for="@Model.INFOGA.Breach" /> Breach (-b)
+                                                        <input type="checkbox" asp-for="@Model.INFOGAEMAIL.Breach" /> Breach (-b)
                                                     </label>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-sm-offset-6 text-right">
                                             <div class="form-group">
-                                                <input type="submit" asp-action="Create" asp-route-cosa="infoga" class="btn btn-default" value="Crea" />&nbsp;&nbsp;
+                                                <input type="submit" asp-action="Create" asp-route-cosa="infogaemail" class="btn btn-default" value="Crea" />&nbsp;&nbsp;
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
