--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -5,7 +5,9 @@
     bool dnsrecon = Model.DNSRECON != null;
     bool droopescan = Model.DROOPE != null;
     bool infoga = Model.INFOGA != null;
+     bool infogaemail = Model.INFOGAEMAIL != null;
     bool wapiti = Model.WAPITI != null;
+
 }
 
 
@@ -428,12 +430,7 @@
             </div>
             <input class="col-sm-9" asp-for="@Model.INFOGA.Dominio" />
         </div>
-        <div class="form-group row">
-            <div class="col-sm-3">
-                <label class="control-label" asp-for="@Model.INFOGA.Email"></label>
-            </div>
-            <input class="col-sm-9" asp-for="@Model.INFOGA.Email" />
-        </div>
+       
     </div>-->
                         <div class="col-sm-7" style="margin:0 auto; float:none">
                             <div class="form-group row">
@@ -474,17 +471,7 @@
                                 <option value="2">tre</option>
                             </select>
                         </div>
-                        <div class="col-sm-12">
-                            <h4>Altro</h4>
-                            <hr />
-                            <div class="row">
-                                <div class="form-group col-sm-6">
-                                    <label class="control-label">
-                                        <input type="checkbox" asp-for="@Model.INFOGA.Breach" /> Breach (-b)
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
+                        
                         <div class="col-sm-6 col-sm-offset-6 text-right">
                             <div class="form-group">
                                 <input type="submit" asp-action="Edit" class="btn btn-default" asp-route-id="@Model.INFOGA.ID" value="Salva" />&nbsp;&nbsp;
@@ -495,6 +482,81 @@
                 </div>
             </div>
         </form>
+    }
+     @* -----INFOGAEMAIL----- *@
+    else if (infogaemail)
+    {
+        <h2>Modifica modulo @(Model.INFOGAEMAIL.Nome)</h2>
+        <hr />
+        <form asp-action="Edit" name="infogaForm">
+                                <input type="hidden" asp-for="@Model.INFOGAEMAIL.Applicazione" value="@webmva.Models.APPLICAZIONE.INFOGAEMAIL" />
+                                <input type="hidden" asp-for="@Model.INFOGAEMAIL.ID" />
+
+                                <div class="col-sm-12">
+                                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                                        <div class="form-group">
+                                            <h4 asp-for="@(Model.INFOGAEMAIL.Nome)">Nome Modulo</h4>
+                                            <input class="form-control" asp-for="@(Model.INFOGAEMAIL.Nome)" />
+                                        </div>
+                                    </div>
+
+                                    <hr />
+                                    <div class="col-sm-12">
+                                        <!--<div class="col-sm-6">
+                                           
+                                            <div class="form-group row">
+                                                <div class="col-sm-3">
+                                                    <label class="control-label" asp-for="@Model.INFOGAEMAIL.Email"></label>
+                                                </div>
+                                                <input class="col-sm-9" asp-for="@Model.INFOGAEMAIL.Email" />
+                                            </div>
+                                        </div>-->
+                                        <div class="col-sm-7" style="margin:0 auto; float:none">
+                                            <div class="form-group row">
+                                                <h4 asp-for="@(Model.INFOGAEMAIL.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                <input class="form-control" asp-for="@(Model.INFOGAEMAIL.ComandoPersonalizzato)" />
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-12">
+                                        <h4>Tipi di enumerazione</h4>
+                                        <hr />
+                                       
+                                        <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli verbosità</label>
+                                            </div>
+                                            <select class="col-sm-5" asp-for="@Model.INFOGAEMAIL.Verbose">
+                                                <option value="3">nessuno</option>
+                                                <option value="0">uno </option>
+                                                <option value="1">due</option>
+                                                <option value="2">tre</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-sm-12">
+                                        <hr />
+                                            <div class="row">
+
+                                                <div class="form-group col-sm-6">
+                                                    <label class="control-label">
+                                                        <input type="checkbox" asp-for="@Model.INFOGAEMAIL.Breach" /> Breach (-b)
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 col-sm-offset-6 text-right">
+                                            <div class="form-group">
+                                                <input type="submit" asp-action="Edit"asp-route-id="@Model.INFOGAEMAIL.ID" class="btn btn-default" value="Salva" />&nbsp;&nbsp;
+                                                <a asp-action="Index"> Torna alla lista</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </form>
+
     }
     @* -----WAPITI----- *@
     else if (wapiti)
