--- a/Views/Report/Index.cshtml
+++ b/Views/Report/Index.cshtml
@@ -38,7 +38,7 @@
                             </td>
                             <td>
                                 <div class="col-sm-10 col-sm-offset-3">
-                                    <a asp-action="Edit" >Scarica formato XML</a> |
+                                    <a asp-action="Edit" >Scarica</a> |
                                    
                                      <a asp-action="Edit" >Importa scan</a>
                                 </div>
