--- a/Views/Progetto/Create.cshtml
+++ b/Views/Progetto/Create.cshtml
@@ -6,8 +6,8 @@
     <div class="row panel panel-default col-md-9">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-          <div class="form-group col-md-12">
-            <div class="form-group col-md-6"><br>
+          <div class="col-sm-12">
+            <div class="col-sm-7" style="margin:0 auto; float:none"><br>
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control"  placeholder="nome"/>
                 <span asp-validation-for="Nome" class="text-danger"></span><br>
