--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -6,6 +6,7 @@ var contOpenVAS = 0;
 var contDnsRecon = 0;
 var contDroope = 0;
 var contInfoga = 0;
+var contInfogaEmail = 0;
 var contWapiti = 0;}
 
 <h2>Sei sicuro di voler cancellare il progetto @Html.DisplayFor(model => model.Nome) ? </h2>
@@ -49,11 +50,12 @@ var contWapiti = 0;}
                             
                             if(item.Modulo is webmva.Models.ModuloNMAP) {contNMAP++;}
                             if(item.Modulo is webmva.Models.ModuloNESSUS) {contNessus++;}
-                            if(item.Modulo is webmva.Models.ModuloOPENVAS) {contOpenVAS++;}
-                            if(item.Modulo is webmva.Models.ModuloDNSRECON){contDnsRecon++}
-                            if(item.Modulo is webmva.Models.ModuloDROOPE){contDroope++}
-                            if(item.Modulo is webmva.Models.ModuloINFOGA){contInfoga++}
-                            if(item.Modulo is webmva.Models.ModuloWapiti){contWapiti++}
+                            //if(item.Modulo is webmva.Models.ModuloOPENVAS) {contOpenVAS++;}
+                            if(item.Modulo is webmva.Models.ModuloDNSRECON){contDnsRecon++;}
+                            if(item.Modulo is webmva.Models.ModuloDROOPE){contDroope++;}
+                            if(item.Modulo is webmva.Models.ModuloINFOGA){contInfoga++;}
+                            if(item.Modulo is webmva.Models.ModuloINFOGAEMAIL){contInfogaEmail++;}
+                            if(item.Modulo is webmva.Models.ModuloWAPITI){contWapiti++;}
                         }
                         @if(contNMAP!=0){
                                 
@@ -208,6 +210,34 @@ var contWapiti = 0;}
                         @foreach (var item in Model.ModuliProgetto) {
                             
                                 @if(item.Modulo is webmva.Models.ModuloINFOGA){
+                                <tr>
+                                <td></td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Nome)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Comando)
+                                    </td>
+                                </tr>
+                               
+                                }
+                                }
+                                </table>
+                                </dd>    
+                        }  
+                        @if(contInfogaEmail!=0){
+                                
+                             <dd><strong>Infoga</strong></dd>
+                            <dd>
+                            <table class="table">
+                                <tr>
+                                    <th> </th>
+                                    <th>Modulo</th>
+                                    <th>Comando</th>
+                                </tr>
+                        @foreach (var item in Model.ModuliProgetto) {
+                            
+                                @if(item.Modulo is webmva.Models.ModuloINFOGAEMAIL){
                                 <tr>
                                 <td></td>
                                     <td>
