--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -757,14 +757,14 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#">
+                        <a href="#" data-toggle="collapse" data-target="#sqlmap">
                             <strong>
                                  SQL
                             </strong>
                             <span class="caret"></span>
                         </a>
                     </div>
-                    <div class="collapse " id="">
+                    <div class="collapse " id="sqlmap">
                         <div class="panel-body ">
 
                             <table class="table">
@@ -783,7 +783,7 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    @foreach (var item in Model.ModuliINFOGA) { 
+                                    @foreach (var item in Model.ModuliSQLMAP) { 
                                     <tr>
                                         <td>
                                            <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
