--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -521,42 +521,41 @@
                         <form asp-action="Create" name="nessusForm">
                             <input type="hidden" asp-for="@Model.NESSUS.Applicazione" value="@webmva.Models.APPLICAZIONE.NESSUS" />
                             <div class="col-sm-12">
-                                <div class="col-sm-6">
+                                  <div class="col-sm-7" style="margin:0 auto; float:none">
                                     <div class="form-group row">
                                         <h4 asp-for="@(Model.NESSUS.Nome)">Nome Modulo</h4>
                                         <input class="form-control" asp-for="@(Model.NESSUS.Nome)" />
                                     </div>
-
                                 </div>
-                                <div class="col-sm-1"></div>
-                                <div class="col-sm-5">
-                                    <div class="form-group row">
-                                        <h4 asp-for="@(Model.NMAP.ComandoPersonalizzato)">Comando Personalizzato</h4>
-                                        <input class="form-control" asp-for="@(Model.NMAP.ComandoPersonalizzato)" />
-                                    </div>
+                            <div class="col-sm-12">
+                                 <h4>Opzioni</h4><hr />
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.NESSUS.ServerIP)">Server IP</h4>
+                                                    <input class="form-control" asp-for="@(Model.NESSUS.ServerIP)" />
+                                                </div>
 
-                                </div>
-
-                            </div>
-                            <div class="col-6">
-                                <label>Opzioni</label>
-                                <div class="panel panel-default">
-                                    <div class="panel-body form-horizontal payment-form">
-                                        <div class="form-group row">
-                                            <div class="col-sm-4">
-                                                <label class="control-label">TCP</label>
                                             </div>
-                                            <input class="form-control" asp-for="@Model.NESSUS.ServerIP" />
-                                                
-                                        </div>
-                                        <br>
-                                        <input asp-for="@Model.NESSUS.Porta" class="form-control">
-                                        <br>
-                                        <div class="col text-right">
-                                            <input type="submit" asp-action="Create" asp-route-cosa="nessus" value="Crea" class="btn btn-default" />
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.NESSUS.Porta)">Porta</h4>
+                                                    <input class="form-control" asp-for="@(Model.NESSUS.Porta)" />
+                                                </div>
+
+                                            </div>
+
                                         </div>
                                     </div>
-                                </div>
+                                     <div class="col-sm-12">
+                                 <hr /></div>
+                           <div class="col-sm-6 col-sm-offset-6 text-right">
+                              
+                                        <div class="form-group">
+                                            <input type="submit" asp-action="Create" asp-route-cosa="nessus" class="btn btn-default" value="Crea" />&nbsp;&nbsp;|
+                                            <a asp-action="Index"> Torna alla lista</a>
+                                        </div>
+                                    </div>   
                             </div>
                         </form>
                     </div>
@@ -662,7 +661,7 @@
                                         <h4>Tipi di enumerazione</h4>
                                         <hr />
                                         <div class="form-group row">
-                                            <div class="col-sm-4">
+                                            <div class="col-sm-5">
                                                 <label class="control-label">Scegli lo scope</label>
                                             </div>
                                             <select class="col-sm-5" asp-for="@Model.WAPITI.Scope">
@@ -676,7 +675,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group row">
-                                            <div class="col-sm-4">
+                                            <div class="col-sm-5">
                                                 <label class="control-label">Scegli la force</label>
                                             </div>
                                             <select class="col-sm-5" asp-for="@Model.WAPITI.Force">
@@ -689,7 +688,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group row">
-                                            <div class="col-sm-4">
+                                            <div class="col-sm-5">
                                                 <label class="control-label">Scegli la verbosità</label>
                                             </div>
                                             <select class="col-sm-5" asp-for="@Model.WAPITI.Verbose">
@@ -699,7 +698,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group row">
-                                            <div class="col-sm-4">
+                                            <div class="col-sm-5">
                                                 <label class="control-label"> Settaggio Minuti</label>
                                             </div>
 
@@ -715,49 +714,49 @@
                                             <div class="col-sm-6">
                                                 <div class="col-sm-12">
                                                     <div class="form-group row">
-                                                        <div class="col-sm-5">
+                                                        <div class="col-sm-6">
                                                             <label class="control-label">
                                                                 <input type="checkbox" asp-for="@Model.WAPITI.Common" /> Common
                                                             </label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <div class="col-sm-5">
+                                                        <div class="col-sm-6">
                                                             <label class="control-label">
                                                                 <input type="checkbox" asp-for="@Model.WAPITI.Nessuno" /> Nessuno
                                                             </label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <div class="col-sm-5">
+                                                        <div class="col-sm-6">
                                                             <label class="control-label">
                                                                 <input type="checkbox" asp-for="@Model.WAPITI.All" /> Tutto
                                                             </label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <div class="col-sm-5">
+                                                        <div class="col-sm-6">
                                                             <label class="control-label">
                                                                 <input type="checkbox" asp-for="@Model.WAPITI.BackUp" /> Back Up
                                                             </label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <div class="col-sm-4">
+                                                        <div class="col-sm-6">
                                                             <label class="control-label">
                                                                 <input type="checkbox" asp-for="@Model.WAPITI.BlindSql" /> Blind Sql
                                                             </label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <div class="col-sm-4">
+                                                        <div class="col-sm-6">
                                                             <label class="control-label">
                                                                 <input type="checkbox" asp-for="@Model.WAPITI.Crlf" /> Crlf
                                                             </label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <div class="col-sm-4">
+                                                        <div class="col-sm-6">
                                                             <label class="control-label">
                                                                 <input type="checkbox" asp-for="@Model.WAPITI.Exec" /> Exec
                                                             </label>
@@ -767,14 +766,14 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group row">
-                                                    <div class="col-sm-4">
+                                                    <div class="col-sm-6">
                                                         <label class="control-label">
                                                             <input type="checkbox" asp-for="@Model.WAPITI.File" /> File
                                                         </label>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
-                                                    <div class="col-sm-4">
+                                                    <div class="col-sm-6">
                                                         <label class="control-label">
                                                             <input type="checkbox" asp-for="@Model.WAPITI.Htaccess" /> Htaccess
                                                         </label>
@@ -1379,7 +1378,7 @@
                                         <hr />
                                         <div class="form-group row">
                                             <div class="col-sm-4">
-                                                <label class="control-label">Scegli l'header</label>
+                                                <label class="control-label">Setta header</label>
                                             </div>
                                              <div class="col-sm-1"></div>
                                             <input type="text" class="col-sm-5"  asp-for="@Model.SQLMAP.header" />
@@ -1444,7 +1443,7 @@
                                                 <label class="control-label">Scegli la porta</label>
                                             </div>
                                              <div class="col-sm-1"></div>
-                                            <input type="number" class="col-sm-5" asp-for="@Model.SQLMAP.porta" />
+                                            <input type="number" class="col-sm-5" asp-for="@Model.SQLMAP.portaSql" />
                                         </div>
                                             <div class="form-group row">
                                                 <div class="col-sm-6">
