--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -868,7 +868,7 @@
                                         <hr />
                                         <div class="form-group row">
                                             <div class="col-sm-4">
-                                                <label class="control-label">Scegli l'header</label>
+                                                <label class="control-label">Setta header</label>
                                             </div>
                                              <div class="col-sm-1"></div>
                                             <input type="text" class="col-sm-5"  asp-for="@Model.SQLMAP.header" />
@@ -933,7 +933,7 @@
                                                 <label class="control-label">Scegli la porta</label>
                                             </div>
                                              <div class="col-sm-1"></div>
-                                            <input type="number" class="col-sm-5" asp-for="@Model.SQLMAP.porta" />
+                                            <input type="number" class="col-sm-5" asp-for="@Model.SQLMAP.portaSql" />
                                         </div>
                                             <div class="form-group row">
                                                 <div class="col-sm-6">
@@ -1190,7 +1190,7 @@
                                     
                                         <div class="col-sm-6 col-sm-offset-6 text-right">
                                             <div class="form-group">
-                                                <input type="submit" asp-action="Edit" class="btn btn-default" value="Salva" />&nbsp;&nbsp;
+                                                <input type="submit" asp-action="Edit" class="btn btn-default"  asp-route-id="@Model.SQLMAP.ID" value="Salva" />&nbsp;&nbsp;
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
